Soft of done with tablet, there like a few visual bug when changing size slowly, e.g. the top half got cut off by the second half if you go small enough.

--- a/src/css/topHalf.css
+++ b/src/css/topHalf.css
@@ -80,7 +80,7 @@ header {
 }
 
 .introduction-text {
-  font-size: clamp(0.8em, 2.2vw, 2rem);
+  font-size: clamp(0.8em, 2.3vw, 2rem);
   margin: 0.67em 20px;
 }
 
@@ -97,6 +97,18 @@ header {
   height: clamp(20px, 40px, 50px);
 }
 
+header::before {
+  content: "";
+  background-color: #3498db;
+  position: absolute;
+  z-index: -1;
+  height: 50vw;
+  width: 105%;
+  left: -5%;
+  top: -20%;
+  transform: skewY(-12deg);
+}
+
 @media (min-width: 1300px) {
   .img-container img {
     height: auto;
@@ -108,30 +120,47 @@ header {
     grid-template-rows: 1fr 2fr 1fr;
   }
 
+  header {
+    padding: 0;
+  }
+
   .header-outer-div {
-    grid-template-columns: 1fr;
+    display: block;
   }
 
   .about-me {
     height: 90%;
+    display: block;
+    margin: 0px 5%;
+    margin-top: 10%;
   }
 
   .img-container {
-    position: absolute;
-    left: -2%;
-    height: 80%;
-    width: 50%;
+    float: left;
+    position: relative;
+    /* height: 300px;
+    width: 200px; */
+    width: auto;
+    z-index: 3;
+    margin-top: -50px;
+    margin-left: 30px;
+    margin-right: 20px;
   }
 
   .img-container > img {
-    width: 100%;
-    height: 100%;
+    float: left;
+    width: 40vw;
+    height: 40vh;
     object-fit: cover;
     object-position: center top;
   }
 
   .header-bg {
     top: -80%;
+  }
+
+  .introduction-text {
+    font-size: 1.9rem;
   }
 }
 
